--- a/anansi_app/templates/base.html
+++ b/anansi_app/templates/base.html
@@ -22,7 +22,7 @@
         {% endblock %}
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        
+        <link rel="stylesheet" href="{% static 'css/app.css' %}">
         
         
 
