--- a/anansi_app/templates/blog/base.html
+++ b/anansi_app/templates/blog/base.html
@@ -17,8 +17,9 @@
         </title>
         <meta name="description" content="{{ page.search_description }}" />
         {% endblock %}
-
+        
         <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <link rel="stylesheet" href="{% static 'css/app.css' %}">
 
         {# Global stylesheets #}
         {% stylesheet_pack 'app' %}
