--- a/anansi_app/templates/blog/components/categories_list.html
+++ b/anansi_app/templates/blog/components/categories_list.html
@@ -1,6 +1,6 @@
 {% load wagtailroutablepage_tags %}
-<div class="mb-4 border rounded-lg border-opacity-75 border-gray-300 shadow-xl overflow-hidden">
-    <div class="bg-amber-100 text-gray-900 px-6 py-4">
+<div class="mb-4 border rounded-lg border-opacity-75 border-amber-300 shadow-xl overflow-hidden">
+    <div class="bg-amber-700 text-gray-900 px-6 py-4">
         <h4 class="text-base font-medium">Categories</h4>
     </div>
     <div class="px-6 py-4">
