--- a/anansi_app/templates/blog/post_page.html
+++ b/anansi_app/templates/blog/post_page.html
@@ -19,8 +19,9 @@
         <hr/>
         <div></div>
     </div>
-    <div class="prose max-w-full">
+    <div class="prose max-w-full"><p class="font-serif">
        {% include "blog/components/streamfield.html" %}
+    </p>
     </div>
 
 {% endblock %}
