--- a/anansi_app/templates/blog/base.html
+++ b/anansi_app/templates/blog/base.html
@@ -19,9 +19,9 @@
         {% endblock %}
 
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-
+        <link rel="stylesheet" href="{% static 'css/app.css' %}">
         {# Global stylesheets #}
-        {% render_bundle 'app'%}
+        {% render_bundle 'app' 'css' %}
 
         {% block extra_css %}
 
